--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "BH노트"
+title                    : "BH_Note"
 title_separator          : "|"
 subtitle                 : small positive action
 name                     : "BH_Note"
@@ -101,15 +101,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "BH_Note"
+  name             : "BH946"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "BH노트의 블로그입니다."
+  bio              : "BH946의 개발자 노트입니다."
   location         : "South Korea"
   email            : # "kobh2895@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:kobh2895@email.com"
+      url: "mailto:kobh2895@gmail.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/BH946"
