--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ google:
 google_site_verification :
 bing_site_verification   :
 yandex_site_verification :
-naver_site_verification  :
+naver_site_verification  : "520b1e1d10098bdb5d47266a58255bfac556dc08"
 
 # Social Sharing
 twitter:
