--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,18 @@ main:
     url: /categories/
   - title: "Tag"
     url: /tags/
+  - title: "Search"
+    url: /search/
+
+docs:
+  - title: "BH_NOTE" # 어차피 대문자 나옴(childern은 아님)
+    children:
+      - title: "Home"
+        url: /index.html/
+      - title: "Category"
+        url: /categories/
+      - title: "Tag"
+        url: /tags/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
