mathjax 수식 지원 코드

--- a/_config.yml
+++ b/_config.yml
@@ -290,5 +290,6 @@ defaults:
       related: true
       show_date : true
       sidebar_main: true
+      mathjax: true 
 
 date_format : "%Y-%m-%d"
