--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
+  - title: "Home"
+    url: /index.html/
   - title: "Category"
     url: /categories/
-  - title: "Tag"
-    url: /tags/
   - title: "Search"
     url: /search/
 
@@ -14,8 +14,8 @@ docs:
         url: /index.html/
       - title: "Category"
         url: /categories/
-      - title: "Tag"
-        url: /tags/
+      - title: "Search"
+        url: /Search/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
